--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,39 @@
 version: 2.1
 
-orbs:
-  android: circleci/android@0.2.1
-
 jobs:
   build:
-    executor: android/android
+    docker:
+      - image: cimg/android:2023.09
     steps:
       - checkout
+
       - run:
-          name: Install JDK 17
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y openjdk-17-jdk
-            sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
-            java -version
-      - restore_cache:
-          key: android-orb-v1-
+          name: Check Java version
+          command: java -version
+
       - run:
-          name: Chmod permissions
-          command: sudo chmod +x ./gradlew
+          name: Gradle permissions
+          command: chmod +x ./gradlew
+
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
-      - save_cache:
-          key: 'android-orb-v1-{{ epoch }}'
-          paths:
-            - ~/.android/build-cache
-            - ~/.android/cache
+
       - run:
-          name: Run Build
+          name: Build
           command: ./gradlew build
+
       - store_artifacts:
           path: app/build/reports
           destination: reports
+
       - run:
           name: Run Tests
           command: ./gradlew lint test
+
       - store_test_results:
           path: app/build/test-results
+
       - store_artifacts:
           path: app/build/outputs/apk/debug/
           destination: artifact-file
